--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ devtools-ksp = "1.9.0-1.0.12"
 google-services = "4.4.1"
 appcompat = "1.6.1"
 material = "1.12.0"
+composeMaterial = "1.3.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,6 +39,7 @@ androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lif
 coil-kt = { group = "io.coil-kt", name = "coil-compose", version.ref = "coit-kt" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
 
 
 [plugins]
