--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,10 +12,12 @@ navigationCompose = "2.7.7"
 lifecycleRuntimeCompose = "2.7.0"
 coit-kt = "2.6.0"
 devtools-ksp = "1.9.0-1.0.12"
-google-services = "4.4.1"
+google-services = "4.4.2"
 appcompat = "1.6.1"
 material = "1.12.0"
 composeMaterial = "1.3.1"
+firebaseMessaging = "24.0.0"
+workRuntimeKtx = "2.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,6 +42,8 @@ coil-kt = { group = "io.coil-kt", name = "coil-compose", version.ref = "coit-kt"
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
 
 
 [plugins]
