--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,12 @@ agp = "8.3.2"
 animation = "1.7.6"
 composeShimmer = "1.3.1"
 converterGson = "2.11.0"
+coreSplashscreen = "1.0.1"
+credentials = "1.3"
+credentialsPlayServicesAuth = "1.3"
 datastorePreferences = "1.1.1"
+firebaseBom = "33.7.0"
+googleid = "1.1.1"
 gson = "2.11.0"
 kotlin = "1.9.0"
 coreKtx = "1.12.0"
@@ -25,6 +30,7 @@ appcompat = "1.6.1"
 material = "1.12.0"
 composeMaterial = "1.3.1"
 firebaseMessaging = "24.0.0"
+playServicesAuth = "21.3.0"
 retrofit = "2.11.0"
 uiTextGoogleFonts = "1.7.6"
 workRuntimeKtx = "2.9.0"
@@ -39,12 +45,18 @@ androidx-compose-material3-material3 = { module = "androidx.compose.material3:ma
 androidx-compose-ui-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-compose-ui-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
+androidx-credentials-play-services-auth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentialsPlayServicesAuth" }
+androidx-credentials = { module = "androidx.credentials:credentials", version.ref = "credentials" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-material = { module = "androidx.compose.material:material", version.ref = "materialVersion" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
 androidx-ui-text-google-fonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 compose-shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "composeShimmer" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+google-firebase-auth = { module = "com.google.firebase:firebase-auth" }
+googleid = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleid" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -80,6 +92,7 @@ androidx-media3-common-ktx = { group = "androidx.media3", name = "media3-common-
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-android = { module = "io.insert-koin:koin-android" }
 koin-compose = {module = "io.insert-koin:koin-androidx-compose"}
+play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
