--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
 
-    <uses-permission android:name="android.permission.INTERNET" />
-<!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
@@ -22,21 +21,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Blibberly"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
-
+        tools:targetApi="31" >
+        <activity
+            android:name=".queue.QueueActivity"
+            android:exported="false"
+            android:label="@string/title_activity_queue"
+            android:theme="@style/Theme.Blibberly" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:theme="@style/Theme.Blibberly">
-
+            android:theme="@style/Theme.Blibberly" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <!--            TODO-->
+            <!-- TODO -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -47,12 +50,11 @@
                     android:host="otpless"
                     android:scheme="otpless.zuoncl5ijsrh5sjpk00g" />
             </intent-filter>
-
         </activity>
 
         <service
             android:name="com.superbeta.blibberly_chat.notification.MyFirebaseMessagingService"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
