--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.3.2"
 animation = "1.7.6"
+auth0 = "2.+"
 composeShimmer = "1.3.1"
 converterGson = "2.11.0"
 datastorePreferences = "1.1.1"
@@ -46,6 +47,7 @@ androidx-datastore-preferences = { module = "androidx.datastore:datastore-prefer
 androidx-material = { module = "androidx.compose.material:material", version.ref = "materialVersion" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
 androidx-ui-text-google-fonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
+auth0 = { module = "com.auth0.android:auth0", version.ref = "auth0" }
 compose-shimmer = { module = "com.valentinilk.shimmer:compose-shimmer", version.ref = "composeShimmer" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
